<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="string.carfile.CarSetUp"
    android:paddingBottom="0dp"
    android:paddingRight="0dp"
    android:paddingLeft="0dp"
    android:id="@+id/carSetupLayout"
    android:background="@color/carfileNavbarColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeToCarfile"
        android:id="@+id/welcomeToCarfile"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vinNumberEnter"
        android:layout_below="@+id/welcomeToCarfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:hint="@string/vinNumEntryHint"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:singleLine="true"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Please Enter Your Vin Number Above"
        android:id="@+id/vinNumberInstruction"
        android:layout_below="@+id/vinNumberEnter"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="Continue"
        android:id="@+id/setupContinue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/carfileNavbarColor"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/manualEntry"
        android:id="@+id/manualEntryButton"
        android:layout_below="@+id/vinNumberInstruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:textStyle="italic"
        android:textColor="@color/buttonPressed" />

</RelativeLayout>
